[project]
name = "network-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.117.1",
    "openai-agents>=0.3.1",
    "pydantic>=2.11.9",
    "requests>=2.32.5",
    "uvicorn>=0.36.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
